begins the long process of making sync repeatable with School, SchoolYear, & Term...